// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage component should be rendered correctly with 5 images 1`] = `
<div
  className="sto-app-images"
>
  <div
    className="sto-app-big-images"
  >
    <img
      alt="photos-image-1"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot1.png"
    />
    <img
      alt="photos-image-2"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot2.png"
    />
  </div>
  <div
    className="sto-app-small-images --space-around"
  >
    <img
      alt="photos-image-3"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot3.png"
    />
    <img
      alt="photos-image-4"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot4.png"
    />
    <img
      alt="photos-image-5"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot5.png"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with provided images 1`] = `
<div
  className="sto-app-images"
>
  <div
    className="sto-app-big-images"
  >
    <img
      alt="photos-image-1"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot1.png"
    />
    <img
      alt="photos-image-2"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot2.png"
    />
  </div>
  <div
    className="sto-app-small-images"
  >
    <img
      alt="photos-image-3"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot3.png"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should be rendered correctly with the first 5 images if more images provided 1`] = `
<div
  className="sto-app-images"
>
  <div
    className="sto-app-big-images"
  >
    <img
      alt="photos-image-1"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot1.png"
    />
    <img
      alt="photos-image-2"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot2.png"
    />
  </div>
  <div
    className="sto-app-small-images --space-around"
  >
    <img
      alt="photos-image-3"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot3.png"
    />
    <img
      alt="photos-image-4"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot4.png"
    />
    <img
      alt="photos-image-5"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot5.png"
    />
  </div>
</div>
`;

exports[`ApplicationPage component should open a modal and handle onClose 1`] = `
<div
  className="sto-app-images"
>
  <div
    className="sto-app-big-images"
  >
    <img
      alt="photos-image-1"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot1.png"
    />
    <img
      alt="photos-image-2"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot2.png"
    />
  </div>
  <div
    className="sto-app-small-images"
  >
    <img
      alt="photos-image-3"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot3.png"
    />
  </div>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    title="Preview"
    withCross={true}
  >
    <ModalContent>
      <img
        alt="image-preview"
        className="sto-app-image-preview"
        src="https://mockcozy.cc/registry/photos/screenshot1.png"
      />
    </ModalContent>
  </Modal>
</div>
`;

exports[`ApplicationPage component should open a modal on image click 1`] = `
<div
  className="sto-app-images"
>
  <div
    className="sto-app-big-images"
  >
    <img
      alt="photos-image-1"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot1.png"
    />
    <img
      alt="photos-image-2"
      className="sto-app-big-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot2.png"
    />
  </div>
  <div
    className="sto-app-small-images"
  >
    <img
      alt="photos-image-3"
      className="sto-app-small-image"
      onClick={[Function]}
      src="https://mockcozy.cc/registry/photos/screenshot3.png"
    />
  </div>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    title="Preview"
    withCross={true}
  >
    <ModalContent>
      <img
        alt="image-preview"
        className="sto-app-image-preview"
        src="https://mockcozy.cc/registry/photos/screenshot1.png"
      />
    </ModalContent>
  </Modal>
</div>
`;

exports[`ApplicationPage component should return null if no images provided 1`] = `null`;
